<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Excerption</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="logout">로그아웃</string>
    <string name="books">책 목록</string>
    <string name="stats">통계</string>
    <string name="calendar">달력</string>
    <string name="profile">내 정보</string>
    <string name="add_book">책 등록</string>
    <string name="scan_text">텍스트 스캔</string>
    <string name="excerpt_list">발췌 목록</string>
    <string name="create_excerpt_image">발췌 이미지</string>
    <string name="write_review">리뷰 작성</string>
</resources>
